    + [NT] Support arbitrary dependency relations.  This new change
      also fixes a "duplicate" in the dependency output.
      (Closes: #643716)
  * data/fields/essential:
    + [NT] Add libc-bin to the list of known essential packages.
  * data/spelling/corrections:
    + [NT] Added a correction for "propagate", thanks to Guillem Jover
      for the suggestion.  (Closes: #644793)

  * lib/Lab.pm:
    + [NT] Updated it to use Lintian::Output::verbosity_level rather
      than verbose.
    + [JW,NT] Correctly handle $TMPDIR not being an absolute path.
      (Closes: #642113)
  * lib/Lintian/Check.pm:
    + [JW] Merged with common_data.pm.
  * lib/Lintian/Collect/Source.pm:
    + [JW] Fixed call to binary_field in binary_relation.
      (Closes: #641609)
  * lib/Lintian/Output/XML.pm:
    + [NT] Use self-closing tags (if possible) and do not write
      attributes with an empty value.
  * lib/Util.pm:
    + [NT] Stricten the parser to not accept a field name with a ":".
      This could cause the parser to eat the first part of the value,
      if it contained a colon and there was no space before the value.
      Thanks to Pino Toscano for reporting the issue.
    + [JW] Explicitly check that files are not encoded using ISO-2022,
      when they should be encoded with UTF-8.  (Closes: #643009)
    + [JW] Use "paragraph" and "field" rather than "section" and "tag"
      when referring to a Debian control file.

  * reporting/*:
    + [NT] Recognise and display pedantic tags.
    + [JW] Only emit "plus X overrides" if there any overrides.
  * reporting/{harness,html_reports}:
    + [NT] Do not accept LINTIAN_UNPACK_LEVEL nor LINTIAN_SECTION
      anymore.  The lintian frontend lost support for these in
      2.5.0~rc3.

 -- Niels Thykier <niels@thykier.net>  Sat, 10 Sep 2011 13:44:01 +0200

lintian (2.5.3) unstable; urgency=low

  The "Another 51 bites the dust.  169 left to go." release.

  * Summary of tag changes:
    + Added: